# agentic-honeypot

./: .env.example  .gitignore  .vercelignore  DEPLOYMENT.md  Dockerfile  ENDPOINT_TEST_LIST.md  FIX_SUMMARY.md  LOCALHOST_STATUS_REPORT.md  POSTMAN_LOCALHOST_GUIDE.md  POSTMAN_SETUP_VERCEL.md  POSTMAN_STATELESS_MODE.md  POSTMAN_TESTING_GUIDE.md  PUBLIC_DEPLOYMENT.md  README.md  SIMPLE_FORMAT_GUIDE.md  TESTING_GUIDE.md  TEST_RESULTS.md  VERCEL_DEPLOYMENT.md  VERCEL_QUICK_DEPLOY.md  VERIFICATION_REPORT.md  docker-compose.yml  fix_vercel_deployment.py  list_models.py  local_server.py  localhost_test.py  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  requirements2.txt  sample_test.py  setup.py  start_server.py  test_ai_response.py  test_both_formats.py  test_camelcase_format.py  test_camelcase_scam.py  test_fixed_endpoints.py  test_improved_detection.py  test_local_server.py  (+6 more)
agentic-honeypot/: design.md  requirements.md  tasks.md
api/: hello.py  index.py  ping.py  process.py  requirements-minimal.txt  requirements.txt
src/honeypot/: __init__.py  main.py
src/honeypot/config/: __init__.py  settings.py
src/honeypot/middleware/: __init__.py  auth.py
src/honeypot/models/: __init__.py  core.py  scam.py  session.py
src/honeypot/services/: ai_agent.py  callback_handler.py  intelligence_extractor.py  orchestrator.py  scam_detector.py  session_manager.py  (+2 more)
tests/: __init__.py  conftest.py  pytest_configure.py  test_ai_agent.py  test_ai_agent_props.py  test_api_integration.py  test_auth_middleware.py  test_callback_handler.py  test_callback_props.py  test_config.py  test_e2e_props.py  test_encryption.py  test_intelligence_extractor.py  test_intelligence_props.py  test_logging.py  test_main.py  test_models.py  test_orchestrator.py  test_scam_detector.py  test_security.py  test_session_manager.py
(+3 files in other folders)
